--- a/get-away-now/index.html
+++ b/get-away-now/index.html
@@ -125,8 +125,8 @@
 <body class="vsc-initialized">
   <div class="input-box" id="input-box" style="text-align: center;">
     <p style="font-size: 3rem;">反复横跳！</p>
-    <div>你的名字：<input type="text" name="" id="input-name" placeholder="周强" field_signature="246837635" form_signature="8404015848584033285"></div>
-    <div>你的学号：<input type="text" name="" id="input-number" placeholder="2017sb945945" field_signature="1852501389" form_signature="8404015848584033285"></div>
+    <div>你的名字：<input type="text" name="" id="input-name" placeholder="张三" field_signature="246837635" form_signature="8404015848584033285"></div>
+    <div>你的学号：<input type="text" name="" id="input-number" placeholder="2020K8009900000" field_signature="1852501389" form_signature="8404015848584033285"></div>
     <div><button onclick="Enter(0)">“放我出去吧”</button></div>
   </div>
 	<div class="content" id="content" style="display: none;">
@@ -139,11 +139,11 @@
     <div class="infos">
       <div class="info">
         <div class="info-title">学生姓名</div>
-        <div class="info-text" id="info-name">周强</div>
+        <div class="info-text" id="info-name">张三</div>
       </div>
       <div class="info">
         <div class="info-title">学号</div>
-        <div class="info-text" id="info-number">2017sb945945</div>
+        <div class="info-text" id="info-number">2020K8009900000</div>
       </div>
       <div class="info">
         <div class="info-title">出校时间</div>
